@@ -8,6 +8,7 @@ CHANGELOG
 ** Bug fixes **
 
 * Fixed land records not shown in detail pages
+* Fixed JSON DEM area extent for treks
 
 ** Installation **
 
